--- a/src/assets/style/scss/stylesheet.scss
+++ b/src/assets/style/scss/stylesheet.scss
@@ -18,7 +18,7 @@ $font-mono: "Roboto Mono", monospace;
   background-color: var(--background);
   color:            var(--foreground);
   font-family:      $font-text, $font-mono;
-  font-size:        20px;
+  font-size:        2.5vmin;
   font-weight:      300;
 }
 
